<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent1"    
    android:id="@+id/VIEW_CONTENT"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
   
     <TextView android:id="@+id/LABEL_RETURN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_marginLeft="60dp"
	    android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/btn_ret"
        android:drawablePadding="10dp"
        android:textColor="@color/lightwhite"
        android:text="@string/goback"
        />
    <!-- 跳过 -->
	<ImageButton android:id="@+id/BTN_SKIP"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="60dp"
	    android:layout_marginTop="40dp"
	    android:src="@drawable/next_btn_circle"
	    android:background="@color/transparent"
	    android:visibility="invisible"/>
	
    <TextView android:id="@+id/LABEL_SKIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@id/BTN_SKIP"
        android:layout_marginTop="52dp"
        android:textSize="30sp"
        android:textColor="@color/lightwhite"
        android:text="@string/skip"        
	    android:visibility="invisible"
        />	

    <TextView android:id="@+id/LABEL_TITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_idcard"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:textColor="@color/lightwhite"
        />
    <ImageView
        android:id="@+id/img_idcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@anim/idcardlist"/>
    
    <TextView android:id="@+id/LABEL_TIMEMOUT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_idcard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="@color/lightwhite"
        />
    
    <TextView android:id="@+id/LABEL_TIPRETURN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="60dp"
        android:textColor="@color/grayBB"
        android:textSize="24sp"
        android:text="@string/tip_cancel_readidcard"
        android:visibility="invisible"
        />
</RelativeLayout>